--- a/package.json
+++ b/package.json
@@ -9,18 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@t3-oss/env-nextjs": "^0.11.1",
+    "@tanstack/react-query": "^5.59.0",
+    "@wix/ecom": "^1.0.761",
+    "@wix/media": "^1.0.123",
+    "@wix/members": "^1.0.104",
+    "@wix/redirects": "^1.0.57",
+    "@wix/reviews": "^1.0.38",
+    "@wix/sdk": "^1.13.0",
+    "@wix/stores": "^1.0.238",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
+    "ky": "^1.7.2",
+    "lucide-react": "^0.451.0",
+    "next": "15.0.0-rc.0",
+    "next-themes": "^0.3.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
-    "next": "15.0.0-rc.0"
+    "react-medium-image-zoom": "^5.2.10",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/eslint-plugin-query": "^5.59.1",
+    "@tanstack/react-query-devtools": "^5.59.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0"
+    "eslint-config-next": "15.0.0-rc.0",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
