--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-15-wix-ecommerce",
+  "name": "nextjs-18-wix-ecommerce",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@floating-ui/react-dom": "^2.1.2",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -21,7 +22,7 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@t3-oss/env-nextjs": "^0.11.1",
-    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query": "^5.0.0",
     "@wix/ecom": "^1.0.761",
     "@wix/media": "^1.0.123",
     "@wix/members": "^1.0.104",
@@ -35,10 +36,10 @@
     "js-cookie": "^3.0.5",
     "ky": "^1.7.2",
     "lucide-react": "^0.451.0",
-    "next": "15.0.0-rc.0",
+    "next": "^13.5.2",
     "next-themes": "^0.3.0",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-medium-image-zoom": "^5.2.10",
     "tailwind-merge": "^2.5.3",
@@ -51,10 +52,10 @@
     "@tanstack/react-query-devtools": "^5.59.0",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "eslint": "^8",
-    "eslint-config-next": "15.0.0-rc.0",
+    "eslint-config-next": "^13.5.2",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
     "prettier": "^3.3.3",
