--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "js-cookie": "^3.0.5",
     "ky": "^1.7.2",
     "lucide-react": "^0.451.0",
-    "next": "^13.5.2",
+    "next": "^15.1.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-medium-image-zoom": "^5.2.10",
+    "rimraf": "^6.0.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
@@ -54,7 +55,7 @@
     "@types/node": "^20",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "eslint": "^8",
+    "eslint": "^9.17.0",
     "eslint-config-next": "^13.5.2",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
